--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,20 @@ node_modules/
 dist/
 build/
 .env
-.env.*
 
 # Python
 __pycache__/
 *.py[cod]
 *.egg-info/
-.venv/
 venv/
-.env
+.venv/
 
 # VSCode
 .vscode/
 *.code-workspace
+
+# Logs
+*.log
 
 # OS
 .DS_Store
