--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 # Build stage
 FROM node:18 AS builder
 WORKDIR /app
-COPY frontend/ /app/
+COPY  . /app/
 RUN npm install && npm run build
 
 # Serve stage
