--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,5 +11,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy project files
 COPY . .
 
+ENV PYTHONPATH=/app
+
 # Start FastAPI app
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
