--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   db:
     image: mysql:8
@@ -11,6 +9,11 @@ services:
       - "3308:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5  
 
   backend:
     build:
@@ -24,8 +27,8 @@ services:
       - DATABASE_URL=mysql+pymysql://root:root123@db:3306/confortaire
       - SECRET_KEY=87d11ee34dd1befca81f051b2fe16d06b7420bdd8e31a0d4a11979e2abdc2357
     depends_on:
-      - db
-
+      db:
+        condition: service_healthy
   frontend:
     build:
       context: ./frontend
