--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,13 +4,22 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install dependencies
+# Install system dependencies required to build bcrypt and cryptography
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libffi-dev \
+    python3-dev \
+    cargo \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python packages
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy project files
 COPY . .
 
+# Set Python path
 ENV PYTHONPATH=/app
 
 # Start FastAPI app
