--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ pymysql
 python-dotenv
 pydantic-settings
 python-jose[cryptography]
-passlib[bcrypt]
-pydantic-settings
+passlib[bcrypt]==1.7.4
+bcrypt==3.2.0
 email-validator
 python-multipart
