--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,17 @@
-FROM node:18
-
-# Set working directory
+# Step 1: Build the app
+FROM node:18 AS builder
 WORKDIR /app
 
-# Copy project files
-COPY . .
-
-# Install dependencies
+COPY package*.json ./
 RUN npm install
 
-# Build the React app
+COPY . .
 RUN npm run build
 
-# Install a simple HTTP server to serve the static files
-RUN npm install -g serve
+# Step 2: Serve using nginx
+FROM nginx:stable-alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Set the command to serve the app
-CMD ["serve", "-s", "dist", "-l", "3000", "--single"]
-
-EXPOSE 3000
+# Remove default nginx config and add your own if needed
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
