--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,12 +6,14 @@ COPY package*.json ./
 RUN npm install
 
 # Copy only the necessary app files
-COPY public ./public
 COPY src ./src
 COPY index.html .
 COPY vite.config.js .
 COPY postcss.config.js .
 COPY tailwind.config.js .
+COPY package-lock.json .
+COPY package.json .
+
 COPY .env .
 
 RUN npm run build
